# cloudio-client-python

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
docs/: development.md
src/cloudio/: __init__.py
src/cloudio/client/: __init__.py  version.py
