[metadata]
name = cloudio-client-python
version = attr: cloudio.client.version.__version__
license = MIT
author = HES-SO Valais, School of Engineering, Sion
author_email = thomas.sterren@hevs.ch
description = cloud.iO client package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boozo-unlimited/cloudio-client-python
keywords = cloud.iO, library, IoT, cloud, client, mqtt
project_urls =
    Bug Tracker = https://github.com/boozo-unlimited/cloudio-client-python/issues
classifiers =
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules

    # Pick your license as you wish
    License :: OSI Approved :: MIT License

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    cloudio-common-python
python_requires = >=3.9

[options.packages.find]
where = src
